--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 irc2murmur - An app to post conversations in an IRC channel as Murmurs on a project on Mingle
+
+As of now, the app just listens to the conversations and logs the conversations.
+
+To see the app in action run irc2murmur.rb
